Agregada sección Noticias

--- a/pages/series.html
+++ b/pages/series.html
@@ -35,11 +35,11 @@
                   Reseñas
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="../pages/peliculas.html">Películas</a></li>
-                  <li><a class="dropdown-item" href="../pages/series.html">Series</a></li>
+                  <li><a class="dropdown-item" href="./pages/peliculas.html">Películas</a></li>
+                  <li><a class="dropdown-item" href="./pages/series.html">Series</a></li>
                   <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="..pages/mcu.html">MCU</a></li>
-                  <li><a class="dropdown-item" href="..pages/dcmultiverse.html">DC Multiverse</a></li>
+                  <li><a class="dropdown-item" href="./pages/mcu.html">MCU</a></li>
+                  <li><a class="dropdown-item" href="./pages/dcmultiverse.html">DC Multiverse</a></li>
                 </ul>
               </li>              
             </ul>
@@ -79,46 +79,7 @@
         </button>
       </div>
     <!-- termina carrusel -->
-    <!-- inicia main -->
-    <main>
-        <section>
-            <h1>NOTICIAS</h1>
-            <p>Las noticias más relevantes del cine y los universos geek que más te apasionan</p>
-        </section>
-        <section>
-            <div class="card-group">
-                <div class="card">
-                  <img src="../img/posters/flashmovie.jpg" class="card-img-top" alt="Flash Trailer">
-                  <div class="card-body">
-                    <h5 class="card-title">Trailer en febrero</h5>
-                    <p4 class="card-text">Según el medio "The Wrap", el trailer de la películas "The Flash" llegará en febrero en el Super Bowl del próximo año que se realizará el domingo 12.</p4>
-                    <p class="card-text"><small class="text-muted">The Hood</small></p>
-                    <a href="https://www.instagram.com/p/CmfHSn-JfYk/" class="btn btn-primary">Ver en Instagram</a>
-                  </div>
-                </div>
-                <div class="card">
-                  <img src="../img/posters/blackadam.jpg" class="card-img-top" alt="The Rock despedido">
-                  <div class="card-body">
-                    <h5 class="card-title">The Rock afuera del DCU</h5>
-                    <p4 class="card-text">Dwayne Johnson, mejor conocido como "The Rock" y protagonista de la última entrega de DC como Black Adam, confirmó mediantes sus redes sociales que no entra en los planes del reinicio del DCU por parte de James Gunn.</p4>
-                    <p class="card-text"><small class="text-muted">The Hood</small></p>
-                    <a href="https://www.instagram.com/p/CmaHNkLpGyB/" class="btn btn-primary">Ver en Instagram</a>
-                  </div>
-                </div>
-                <div class="card">
-                  <img src="../img/posters/spiderman.jpg" class="card-img-top" alt="Spectacular Spiderman">
-                  <div class="card-body">
-                    <h5 class="card-title">Otro amigable vecino regresa</h5>
-                    <p4 class="card-text">Además de presentar a "SpiderMan 2099" o "Scarlet Spider", la secuela de la "oscarizada" Spiderman: Into the Spider-verse servirá para reintroducir a otro de los más populares y queridos trepamuros: Spectacular Spider-Man. <br> <br>
-                    Así lo confirmó el productor de la cinta, Chris Miller, tras contestarle a un fan que hizo la pregunta en las redes sociales tras ver un póster oficial lanzado en Turquía. </p4>
-                    <p class="card-text"><small class="text-muted">The Hood</small></p>
-                    <a href="https://www.instagram.com/p/CmZ2OwOpMWE/" class="btn btn-primary">Ver en Instagram</a>
-                  </div>
-                </div>
-              </div>
-        </section>
 
-    <!-- cierra main -->
 
 
     <script src="../js/bootstrap.bundle.min.js"></script>
