--- a/index.html
+++ b/index.html
@@ -25,21 +25,21 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">Noticias</a>
+                <a class="nav-link" aria-current="page" href="./pages/noticias.html">Noticias</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Recomendaciones</a>
+                <a class="nav-link" href="./pages/recomendaciones.html">Recomendaciones</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Reseñas
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Películas</a></li>
-                  <li><a class="dropdown-item" href="#">Series</a></li>
+                  <li><a class="dropdown-item" href="./pages/peliculas.html">Películas</a></li>
+                  <li><a class="dropdown-item" href="./pages/series.html">Series</a></li>
                   <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">MCU</a></li>
-                  <li><a class="dropdown-item" href="#">DC Multiverse</a></li>
+                  <li><a class="dropdown-item" href="./pages/mcu.html">MCU</a></li>
+                  <li><a class="dropdown-item" href="./pages/dcmultiverse.html">DC Multiverse</a></li>
                 </ul>
               </li>              
             </ul>
