--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -91,8 +91,9 @@
                   <img src="../img/posters/flashmovie.jpg" class="card-img-top" alt="Flash Trailer">
                   <div class="card-body">
                     <h5 class="card-title">Trailer en febrero</h5>
-                    <p4 class="card-text">Según el medio "The Wrap", el trailer de la películas "The Flash" llegará en febrero en el Super Bowl del próximo año que se realizará el domingo 12.</p4>
-                    <p class="card-text"><small class="text-muted">The Hood</small></p>
+                    <p4 class="card-text">Según el medio "The Wrap", el trailer de la películas "The Flash" llegará en febrero en el Super Bowl del próximo año que se realizará el domingo 12.</p4> <br>
+                    <p1 class="card-text"><small>The Hood</small></p1> <br> <br>
+
                     <a href="https://www.instagram.com/p/CmfHSn-JfYk/" class="btn btn-primary">Ver en Instagram</a>
                   </div>
                 </div>
@@ -101,7 +102,8 @@
                   <div class="card-body">
                     <h5 class="card-title">The Rock afuera del DCU</h5>
                     <p4 class="card-text">Dwayne Johnson, mejor conocido como "The Rock" y protagonista de la última entrega de DC como Black Adam, confirmó mediantes sus redes sociales que no entra en los planes del reinicio del DCU por parte de James Gunn.</p4>
-                    <p class="card-text"><small class="text-muted">The Hood</small></p>
+                    <br>
+                    <p1 class="card-text"><small>The Hood</small></p1> <br> <br>
                     <a href="https://www.instagram.com/p/CmaHNkLpGyB/" class="btn btn-primary">Ver en Instagram</a>
                   </div>
                 </div>
@@ -111,7 +113,8 @@
                     <h5 class="card-title">Otro amigable vecino regresa</h5>
                     <p4 class="card-text">Además de presentar a "SpiderMan 2099" o "Scarlet Spider", la secuela de la "oscarizada" Spiderman: Into the Spider-verse servirá para reintroducir a otro de los más populares y queridos trepamuros: Spectacular Spider-Man. <br> <br>
                     Así lo confirmó el productor de la cinta, Chris Miller, tras contestarle a un fan que hizo la pregunta en las redes sociales tras ver un póster oficial lanzado en Turquía. </p4>
-                    <p class="card-text"><small class="text-muted">The Hood</small></p>
+                    <br>
+                    <p1 class="card-text"><small>The Hood</small></p1> <br> <br>
                     <a href="https://www.instagram.com/p/CmZ2OwOpMWE/" class="btn btn-primary">Ver en Instagram</a>
                   </div>
                 </div>
