--- a/pages/recomendaciones.html
+++ b/pages/recomendaciones.html
@@ -79,8 +79,83 @@
         </button>
       </div>
     <!-- termina carrusel -->
-
-
+    <!-- inicia main -->
+    <main>
+        <section>
+            <h1>RECOMENDACIONES</h1>
+            <p>No siempre es necesario ver estrenos, a veces hay que encontrarse con una película o serie que aún no has visto. Por eso aquí te recomendamos algunas.</p>
+        </section>
+        <section>
+            <div class="card mb-3">
+                <img src="../img/posters/freud.jpeg" class="card-img-top" alt="Freud Serie">
+                <div class="card-body">
+                  <h5 class="card-title">Freud (miniserie)</h5>
+                  <p4 class="card-text">
+                    📝SINÓPSIS: <br>
+Ansioso por ganarse un lugar en la Viena del siglo XIX, el joven Sigmund Freud se une a una psíquica y a un inspector para resolver una serie de sangrientos misterios. <br>
+<br>
+🗣️OPINIÓN: <br>
+Si, el nombre de Freud es un poco una excusa, porque no distingue al llamado de contarte la historia del reconocido padre del psicoanálisis, sino que lo usa como un vínculo histórico para traer una trama interesante y fantasiosa, y cuando digo fantasiosa es en serio. Aquel que ame temas como la "hipnosis" por ejemplo, sepa que lo van a usar de forma un tanto ridícula, como siempre.
+<br>
+Pero el atractivo está en adentrarse en esta mezcla de un poco de la historia de Sigmund con la fantasía y el misterio inventado. Trae personajes muy bien desarrollados e interesantes, que se van a ir convirtiendo en complejos y empáticos.
+<br>
+Arranca un poco confusa es cierto, pero en ello encuentra hacer que el espectador enganche y quiera saber lo que va a suceder. Es divertida, pero no es para personas sensibles tampoco, tiene momentos fuertes y turbios.
+<br>
+Es un thriller psicológico con una trama sobrenatural, espiritista y hasta detectivesca, con un aire a Sherlock Holmes.
+<br>
+Si la ven, espero la disfruten tanto como yo. No es una obra maestra, pero es algo diferente entre tanto cliché en esta época.
+<br> <br>
+👥CAST: <br>
+▶️Director: Marvin Kren (ABCs of Death; 4 Blocks)
+<br>
+▶️Robert Finster (Tribus de Europa; Prey 2021) como Sigmund Freud
+<br>
+▶️Ella Rumpf (Succession; Tokyo Vice) como Fleur Salomé
+<br>
+▶️Anja Kling (Hannah Mangold & Lucy Palm; Kein Entkommen) como Sophia von Szápáry
+<br>
+▶️Philipp Hochmair (Die Wannseekonferenz; Kater) como Viktor von Szápáry
+<br>
+▶️Georg Friedrich como Alfred Kiss
+<br>
+▶️Brigitte Kren como Lenore
+<br>
+▶️Christoph Krutzler como Franz Poschacher
+                  </p4> <br> <br>
+                  <p1 class="card-text"><small>The Hood</small></p1>
+                </div>
+              </div>
+              <div class="card mb-3">
+                <img src="../img/posters/moneyball.jpg" class="card-img-top" alt="Moneyball Brad Pitt">
+                <div class="card-body">
+                  <h5 class="card-title">Moneyball (película)</h5>
+                  <p4 class="card-text">
+                    📝SINÓPSIS: <br>
+Billy Beane (Brad Pitt), gerente general de los Atléticos de Oakland, un día tiene una epifanía: la sabiduría convencional del béisbol está completamente equivocada. Enfrentado a un presupuesto ajustado, Beane debe reinventar su equipo burlando a los clubes de béisbol más ricos. Uniendo fuerzas con el graduado de la Ivy League Peter Brand (Jonah Hill), Beane se prepara para desafiar las tradiciones de la vieja escuela. Recluta jugadores de ganga a quienes los exploradores han etiquetado como defectuosos, pero que tienen potencial para ganar juegos. Basado en el libro de Michael Lewis. <br>
+<br>
+🗣️OPINIÓN: <br>
+¿Realmente se puede cambiar un sistema deportivo basándose en estadísticas? ¿Se podría aplicar en el béisbol? Ciertamente sí se puede, se ha hecho y es lo que Moneyball nos trata de exponer con mucha inspiración. Aunque no te preocupes, no necesitas saber de estadísticas ni de béisbol para entender este drama deportivo, porque Miller detrás cámara, y Pitt y Hill delante de ellas, nos mantienen pegados con mucha fluidez cuando informan con esta historia, obviamente basada en hechos reales.
+<br>
+Hace unos años un amigo me lo recomendó y no le di importancia porque no me interesa mucho el béisbol y bueno  ahora le di una oportunidad la verdad que es muy buena película; tanto las actuaciones de Brad Pitt como la Jonah Hill destacan muchísimo. Deja un buen mensaje la película sobre cómo reorganizar todo, cómo se ve la estrategia, de cómo se potencian las personas, la motivación del equipo, aprovechando al máximo los recursos de este y el potencial de quienes lo forman.
+<br>
+La súper recomiendo, aún si no sos seguidor del béisbol, este te va a gustar mucho. Es muy entretenida, dura dos horas y pasan volando.
+<br>
+<br>
+👥CAST: <br>
+▶️Director: Bennett Miller (The Question; Foxcatcher)
+<br>
+▶️Brad Pitt (Guerra Mundial Z; Troya) como Billy Beane
+<br>
+▶️Jonah Hill (El Lobo de Wall Street; No Mires Arriba) como Peter Brand
+<br>
+▶️Philip Seymour Hoffman (The Hunger Games; El gran Lebowski) como Art Howe
+<br>
+▶️Chris Pratt (Guardianes de la Galaxia; Jurassic World) como Scott Hatteberg
+                  </p4> <br> <br>
+                  <p3 class="card-text"><small>Wallcrawler</small></p3>
+                </div>
+              </div>
+        </section>
 
     <script src="../js/bootstrap.bundle.min.js"></script>
 </body>
