--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -35,11 +35,11 @@
                   Reseñas
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="../pages/peliculas.html">Películas</a></li>
-                  <li><a class="dropdown-item" href="../pages/series.html">Series</a></li>
+                  <li><a class="dropdown-item" href="peliculas.html">Películas</a></li>
+                  <li><a class="dropdown-item" href="series.html">Series</a></li>
                   <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="..pages/mcu.html">MCU</a></li>
-                  <li><a class="dropdown-item" href="..pages/dcmultiverse.html">DC Multiverse</a></li>
+                  <li><a class="dropdown-item" href="mcu.html">MCU</a></li>
+                  <li><a class="dropdown-item" href="dcmultiverse.html">DC Multiverse</a></li>
                 </ul>
               </li>              
             </ul>
@@ -122,7 +122,9 @@
         </section>
 
     <!-- cierra main -->
-
+    <footer class="foot">
+      <p>PARA LEER MÁS NOTICIAS, SEGUÍNOS EN <span> <a href="http://instagram.com/guanteleteuy" target="_blank"> NUESTRO INSTAGRAM </a> </p>
+    </footer>
 
     <script src="../js/bootstrap.bundle.min.js"></script>
 </body>
