--- a/pages/recomendaciones.html
+++ b/pages/recomendaciones.html
@@ -35,11 +35,11 @@
                   Reseñas
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="../pages/peliculas.html">Películas</a></li>
-                  <li><a class="dropdown-item" href="../pages/series.html">Series</a></li>
+                  <li><a class="dropdown-item" href="peliculas.html">Películas</a></li>
+                  <li><a class="dropdown-item" href="series.html">Series</a></li>
                   <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="..pages/mcu.html">MCU</a></li>
-                  <li><a class="dropdown-item" href="..pages/dcmultiverse.html">DC Multiverse</a></li>
+                  <li><a class="dropdown-item" href="mcu.html">MCU</a></li>
+                  <li><a class="dropdown-item" href="dcmultiverse.html">DC Multiverse</a></li>
                 </ul>
               </li>              
             </ul>
@@ -156,6 +156,10 @@ La súper recomiendo, aún si no sos seguidor del béisbol, este te va a gustar 
                 </div>
               </div>
         </section>
+        
+    <footer class="foot">
+            <p>PARA LEER MÁS DE NUESTRAS RECOMENDACIONES, SEGUÍNOS EN <span> <a href="http://instagram.com/guanteleteuy" target="_blank"> NUESTRO INSTAGRAM </a> </p>
+    </footer>
 
     <script src="../js/bootstrap.bundle.min.js"></script>
 </body>
