row en recomendaciones

--- a/pages/recomendaciones.html
+++ b/pages/recomendaciones.html
@@ -85,7 +85,8 @@
             <h1>RECOMENDACIONES</h1>
             <p>No siempre es necesario ver estrenos, a veces hay que encontrarse con una película o serie que aún no has visto. Por eso aquí te recomendamos algunas.</p>
         </section>
-        <section>
+        <section class="row">
+          <article class="col-sm-12 col-md-6 col-lg-6">
             <div class="card mb-3">
                 <img src="../img/posters/freud.jpeg" class="card-img-top" alt="Freud Serie">
                 <div class="card-body">
@@ -125,6 +126,8 @@ Si la ven, espero la disfruten tanto como yo. No es una obra maestra, pero es al
                   <p1 class="card-text"><small>The Hood</small></p1>
                 </div>
               </div>
+          </article>
+          <article class="col-sm-12 col-md-6 col-lg-6">
               <div class="card mb-3">
                 <img src="../img/posters/moneyball.jpg" class="card-img-top" alt="Moneyball Brad Pitt">
                 <div class="card-body">
@@ -155,6 +158,7 @@ La súper recomiendo, aún si no sos seguidor del béisbol, este te va a gustar 
                   <p3 class="card-text"><small>Wallcrawler</small></p3>
                 </div>
               </div>
+          </article>
         </section>
         
     <footer class="foot">
