--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
                 <p>Somos un equipo de amigos y periodistas dedicados a hablar, opinar e interactuar sobre todos los universos geek que nos gustan. Cine, series, superhéroes y mucho más en: <br> EL GUANTELETE DE LA CRÍTICA <br></p>
                 <p>ADMINISTRADORES:</p>
                 <figure>                
-                  <img src="../EL GUANTELETE/img/nos/the hood (1).jpg" alt="The Hood" width="180px">
-                  <img src="../EL GUANTELETE/img/nos/joker.jpg" alt="Mr Puddin" width="180px">
-                  <img src="../EL GUANTELETE/img/nos/wallcrawler3.jpg" alt="Wallcrawler" width="180px">
+                  <img src="../PreEntrega2/img/nos/the hood (1).jpg" alt="The Hood" width="180px">
+                  <img src="../PreEntrega2/img/nos/joker.jpg" alt="Mr Puddin" width="180px">
+                  <img src="../PreEntrega2/img/nos/wallcrawler3.jpg" alt="Wallcrawler" width="180px">
                 </figure>
               </div>
             </div>
@@ -105,7 +105,7 @@
               <div class="p-3">
                 <figure>
                   <h3>LAS GEMAS DE LA CRÍTICA</h3>            
-                      <img src="../EL GUANTELETE/img/gemas.webp" alt="Gemas" width="500px">
+                      <img src="../PreEntrega2/img/gemas.webp" alt="Gemas" width="500px">
                       <figcaption>Una forma diferente de reseñas nuestros productos geek favoritos </figcaption>
                   </figure>
               </div>
