empezando con sass

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- link css BS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <!-- link de mi css -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
     <!-- inicia nav -->
